<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2016-2025 Álinson Santos Xavier <git@axavier.org>
  ~
  ~ This file is part of Loop Habit Tracker.
  ~
  ~ Loop Habit Tracker is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by the
  ~ Free Software Foundation, either version 3 of the License, or (at your
  ~ option) any later version.
  ~
  ~ Loop Habit Tracker is distributed in the hope that it will be useful, but
  ~ WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
  ~ or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for
  ~ more details.
  ~
  ~ You should have received a copy of the GNU General Public License along
  ~ with this program. If not, see <http://www.gnu.org/licenses/>.
  -->

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/flowBackgroundColor"
    android:fillViewport="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:elevation="0dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/flow_secondary_header_expanded_height"
            app:collapsedTitleTextColor="@android:color/transparent"
            app:contentScrim="@android:color/transparent"
            app:expandedTitleGravity="center_horizontal|bottom"
            app:expandedTitleMarginBottom="@dimen/flow_extra_large_spacing"
            app:expandedTitleMarginEnd="@dimen/flow_screen_padding"
            app:expandedTitleMarginStart="@dimen/flow_screen_padding"
            app:expandedTitleTextAppearance="@style/TextAppearance.Flow.ScreenTitle"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:statusBarScrim="@android:color/transparent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/flow_toolbar_height"
                android:background="@android:color/transparent"
                android:theme="?attr/flowToolbarTheme"
                app:contentInsetEnd="0dp"
                app:contentInsetStartWithNavigation="0dp"
                app:layout_collapseMode="pin"
                app:popupTheme="?toolbarPopupTheme" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/outerLinearLayout"
            style="@style/CardList"
            android:paddingStart="@dimen/flow_body_padding"
            android:paddingTop="@dimen/flow_large_spacing"
            android:paddingEnd="@dimen/flow_body_padding">

            <LinearLayout
                style="@style/Card"
                android:background="@drawable/flow_card_background"
                android:gravity="center">

                <ImageView
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_margin="6dp"
                    android:src="@drawable/onboarding_appicon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_margin="6dp"
                    android:textColor="?attr/flowTextPrimaryColor"
                    android:text="@string/app_name" />

                <TextView
                    android:id="@+id/tvVersion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="" />

            </LinearLayout>

            <LinearLayout
                style="@style/Card"
                android:background="@drawable/flow_card_background"
                android:gravity="center">

                <TextView
                    style="@style/CardHeader"
                    android:text="@string/links"
                    android:textColor="?attr/flowTextPrimaryColor" />

                <TextView
                    android:id="@+id/tvRate"
                    style="@style/About.Item.Clickable"
                    android:text="@string/pref_rate_this_app" />

                <TextView
                    android:id="@+id/tvFeedback"
                    style="@style/About.Item.Clickable"
                    android:text="@string/pref_send_feedback" />

                <TextView
                    android:id="@+id/tvTranslate"
                    style="@style/About.Item.Clickable"
                    android:text="@string/help_translate" />

                <TextView
                    android:id="@+id/tvSource"
                    style="@style/About.Item.Clickable"
                    android:text="@string/pref_view_source_code" />

                <TextView
                    android:id="@+id/tvPrivacy"
                    style="@style/About.Item.Clickable"
                    android:text="@string/pref_view_privacy" />

            </LinearLayout>

            <LinearLayout
                style="@style/Card"
                android:background="@drawable/flow_card_background"
                android:gravity="center">

                <TextView
                    style="@style/CardHeader"
                    android:text="@string/developers"
                    android:textColor="?attr/flowTextPrimaryColor" />

                <!--
                This file lists developers who contributed with at least 100 lines
                of code or 5 commits to our code base, sorted by the number of commits.
                All other contributors are acknowledge in the GitHub Contributors page,
                linked at the bottom of the list. If you qualify, please feel free to
                submit a pull request adding yourself here.
                -->
                <TextView
                    style="@style/About.Item"
                    android:text="Álinson S. Xavier (@iSoron)" />

                <TextView
                    style="@style/About.Item"
                    android:text="Quentin Hibon (@hiqua)" />

                <TextView
                    style="@style/About.Item"
                    android:text="Oleg Ivashchenko (@olegivo)" />

                <TextView
                    style="@style/About.Item"
                    android:text="Kristian Tashkov (@KristianTashkov)" />

                <TextView
                    style="@style/About.Item"
                    android:text="Jakub Kalinowski (@kalina559)" />

                <TextView
                    style="@style/About.Item"
                    android:text="Rechee Jozil (@recheej)" />

                <TextView
                    style="@style/About.Item"
                    android:text="Sebastian Gallese (@sgallese)" />

                <TextView
                    style="@style/About.Item"
                    android:text="Luboš Luňák (@llunak)" />

                <TextView
                    style="@style/About.Item"
                    android:text="Bindu (@vbh)" />

                <TextView
                    style="@style/About.Item"
                    android:text="Victor Yu (@vyu1)" />

                <TextView
                    style="@style/About.Item"
                    android:text="Christoph Hennemann (@chennemann)" />

                <TextView
                    style="@style/About.Item"
                    android:text="Денис (@sciamano)" />

                <TextView
                    style="@style/About.Item"
                    android:text="Joseph Tran (@JotraN)" />

                <TextView
                    style="@style/About.Item"
                    android:text="Nikhil (@regularcoder)" />

                <TextView
                    style="@style/About.Item"
                    android:text="JanetQC" />

                <TextView
                    android:id="@+id/tvContributors"
                    style="@style/About.Item.Clickable"
                    android:text="@string/view_all_contributors" />

            </LinearLayout>

            <include layout="@layout/about_translators" />

        </LinearLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
